--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@nuxt/fonts": "^0.11.4",
-    "@tailwindcss/vite": "^4.1.7",
     "nuxt": "^3.17.4",
     "nuxt-lucide-icons": "^1.0.5",
     "vue": "^3.5.14",
@@ -20,8 +19,8 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "postcss": "^8.5.6"
   }
 }
